<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img38"
    tools:context=".ui.Buspackage">

    <TextView
        android:id="@+id/tvSelectpacage1"
        android:layout_width="387dp"
        android:layout_height="72dp"
        android:text="@string/tvBus"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/btnclr4"
        android:textSize="@dimen/txtSize"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031" />

    <Button
        android:id="@+id/btnBook2"
        android:layout_width="152dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/btnclr2"
        android:text="@string/btnBookNow"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/tvFoodandDrink"
        android:layout_width="223dp"
        android:layout_height="42dp"
        android:text="@string/tvType"
        android:textColor="@color/white"
        android:textSize="@dimen/txtsize2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="347dp"
        android:layout_height="87dp"
        android:text="@string/tvType1"
        android:textColor="@color/design_default_color_error"
        android:textSize="@dimen/txtsize2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <TextView
        android:id="@+id/tvFacilities"
        android:layout_width="211dp"
        android:layout_height="41dp"
        android:text="@string/tvFacilities"
        android:textColor="@color/white"
        android:textSize="@dimen/txtsize2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415" />

    <TextView
        android:id="@+id/tvFacilitidetails2"
        android:layout_width="358dp"
        android:layout_height="131dp"
        android:text="@string/tvFaciliti3"
        android:textAlignment="center"
        android:textColor="#ED12F8F6"
        android:textSize="@dimen/txtsize2"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:text="@string/tvPrice1"
        android:textColor="@color/white"
        android:textSize="@dimen/txtsize2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793" />

    <TextView
        android:id="@+id/tvPricedetails"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:text="@string/tvPacPrice"
        android:textColor="#F41818"
        android:textSize="@dimen/txtsize2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879" />


</androidx.constraintlayout.widget.ConstraintLayout>