<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img40"
    tools:context=".ui.vanPackage">

    <TextView
        android:id="@+id/tvSelectpacage1"
        android:layout_width="375dp"
        android:layout_height="57dp"
        android:text="@string/tvVan"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/btnclr4"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/btnBook2"
        android:layout_width="152dp"
        android:layout_height="54dp"
        android:backgroundTint="#68D50000"
        android:text="@string/btnBookNow"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

    <TextView
        android:id="@+id/tvFoodandDrink"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text="@string/tvType"
        android:textColor="#DCFFD600"
        android:textSize="@dimen/txtsize2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="102dp"
        android:layout_height="77dp"
        android:text="@string/vantype"
        android:textColor="@color/white"
        android:textSize="@dimen/txtsize2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <TextView
        android:id="@+id/tvFacilities"
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:text="@string/tvFacilities"
        android:textColor="#DFFFD600"
        android:textSize="@dimen/txtsize2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675" />

    <TextView
        android:id="@+id/tvFacilitidetails2"
        android:layout_width="290dp"
        android:layout_height="104dp"
        android:text="@string/vanfaci"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/txtsize2"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="82dp"
        android:layout_height="37dp"
        android:text="@string/tvPrice1"
        android:textColor="#DFFFD600"
        android:textSize="@dimen/txtsize2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />

    <TextView
        android:id="@+id/tvPricedetails"
        android:layout_width="157dp"
        android:layout_height="52dp"
        android:text="@string/vanprice"
        android:textColor="#FDF9F9"
        android:textSize="@dimen/txtsize2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213" />


</androidx.constraintlayout.widget.ConstraintLayout>